ARROW-3338: [Python] Crash when schema and columns do not match

Author: Krisztián Szűcs <szucs.krisztian@gmail.com>

Closes #2643 from kszucs/ARROW-3338 and squashes the following commits:

9389d608a <Krisztián Szűcs> make test case python27 compatible
733e18fdd <Krisztián Szűcs> fix schema validation in Table::FromRecordBatches